updated stylings and hopefully fixed bg image on mobile

--- a/src/components/Navigation/style.css
+++ b/src/components/Navigation/style.css
@@ -19,7 +19,7 @@
     background: rgb(58, 58, 58);
 }
 
-.testing {
+.toggle-button {
     position: fixed;
     top: 0;
     left: 0;
@@ -30,11 +30,7 @@
     z-index: 999;
 }
 
-#responsive-navbar-nav {
-    transition: 0.5s;
-}
-
-.sidebar .closebtn {
+.closebtn {
     position: absolute;
     top: 0;
     right: 25px;
