--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,19 @@
   padding: 0;
 } */
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
     /* font-family: "Lato", sans-serif; */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -19,8 +25,8 @@ body {
   /* background: url('./assets/images/aliane-schwartzhaupt-QdmUva6qBTk-unsplash.jpg'); */
   background: url('./assets/images/adrian-Xft-JdC-Jbc-unsplash.jpg') no-repeat bottom center fixed;
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh !important; */
 
   background-color: rgb(203, 203, 203);
  
